deploy: 62f8c6ceae94671c79626c133108125f3bb66778

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1012,7 +1012,7 @@
 <td style="text-align: left;">MK1</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">Curiosity Nano PIC18F57Q4</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
@@ -1020,21 +1020,21 @@
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">CuriosityNanoAL1</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
-<td style="text-align: left;">1</td>
+<td style="text-align: left;">10k ohm resistor</td>
+<td style="text-align: left;">3</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
 <td style="text-align: left;">KEMET</td>
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R1, R3, R9</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">100k ohm resistor</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
@@ -1042,10 +1042,10 @@
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R2</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">1k ohm resistor</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
@@ -1053,10 +1053,10 @@
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R4</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">2.2k ohm resistor</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
@@ -1064,21 +1064,21 @@
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R5</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
-<td style="text-align: left;">1</td>
+<td style="text-align: left;">100 ohm resistor</td>
+<td style="text-align: left;">2</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
 <td style="text-align: left;">KEMET</td>
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R6, R7</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">220 ohm resistor</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
@@ -1086,7 +1086,51 @@
 <td style="text-align: left;">C0805F104K5RACTU</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">F1</td>
+<td style="text-align: left;">R8</td>
+</tr>
+<tr>
+<td style="text-align: left;">10k potentiometer</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">RV1</td>
+</tr>
+<tr>
+<td style="text-align: left;">Push button switch</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">SW1</td>
+</tr>
+<tr>
+<td style="text-align: left;">Test point</td>
+<td style="text-align: left;">5</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">TP1, TP2, TP3, TP4, TP5</td>
+</tr>
+<tr>
+<td style="text-align: left;">MCP6004 Op Amp</td>
+<td style="text-align: left;">1</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">U1</td>
 </tr>
 </tbody>
 </table>
