deploy: 375082aba3b1889daf17a65479fb93a604188cc7

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -930,8 +930,8 @@
 <td style="text-align: left;">$1.54</td>
 <td style="text-align: left;">Littelfuse Inc.</td>
 <td style="text-align: left;">0251.200MXL</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/littelfuse-inc/0251-200MXL/700695?_gl=1<em>wdb7kz</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
-<td style="text-align: left;">[datasheet] (https://www.littelfuse.com/assetdocs/fuse-251-datasheet?assetguid=f47a0bb7-8ede-4679-9646-7114c3787688)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/0251-200MXL/700695?_gl=1*wdb7kz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.littelfuse.com/assetdocs/fuse-251-datasheet?assetguid=f47a0bb7-8ede-4679-9646-7114c3787688">datasheet</a></td>
 <td style="text-align: left;">F1</td>
 </tr>
 <tr>
@@ -963,8 +963,8 @@
 <td style="text-align: left;">$1.07</td>
 <td style="text-align: left;">Sullins Connector Solutions</td>
 <td style="text-align: left;">PPPC201LFBN-RC</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/sullins-connector-solutions/PPPC201LFBN-RC/810192?_gl=1<em>d44lpb</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
-<td style="text-align: left;">[datasheet] (https://mm.digikey.com/Volume0/opasdata/d220001/medias/docus/937/Female_Headers.100_DS.pdf?_gl=1<em>s5n6hg</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/sullins-connector-solutions/PPPC201LFBN-RC/810192?_gl=1*d44lpb*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;"><a href="https://mm.digikey.com/Volume0/opasdata/d220001/medias/docus/937/Female_Headers.100_DS.pdf?_gl=1*s5n6hg*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">datasheet</a></td>
 <td style="text-align: left;">J3</td>
 </tr>
 <tr>
@@ -974,8 +974,8 @@
 <td style="text-align: left;">$0.49</td>
 <td style="text-align: left;">Sullins Connector Solutions</td>
 <td style="text-align: left;">PPPC032LFBN-RC</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/sullins-connector-solutions/PPPC032LFBN-RC/810243?_gl=1<em>1wzpchz</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
-<td style="text-align: left;">[datasheet] (https://mm.digikey.com/Volume0/opasdata/d220001/medias/docus/937/Female_Headers.100_DS.pdf?_gl=1<em>1wzpchz</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/sullins-connector-solutions/PPPC032LFBN-RC/810243?_gl=1*1wzpchz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;"><a href="https://mm.digikey.com/Volume0/opasdata/d220001/medias/docus/937/Female_Headers.100_DS.pdf?_gl=1*1wzpchz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">datasheet</a></td>
 <td style="text-align: left;">J4</td>
 </tr>
 <tr>
@@ -985,8 +985,8 @@
 <td style="text-align: left;">$0.28</td>
 <td style="text-align: left;">Würth Elektronik</td>
 <td style="text-align: left;">60900213421</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/w%C3%BCrth-elektronik/60900213421/2508447?_gl=1<em>12v59x2</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
-<td style="text-align: left;">[datasheet] (https://www.we-online.com/components/products/datasheet/60900213421.pdf)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/w%C3%BCrth-elektronik/60900213421/2508447?_gl=1*12v59x2*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.we-online.com/components/products/datasheet/60900213421.pdf">datasheet</a></td>
 <td style="text-align: left;">JP1, JP2, JP3, JP4, JP5</td>
 </tr>
 <tr>
@@ -996,8 +996,8 @@
 <td style="text-align: left;">$0.50</td>
 <td style="text-align: left;">STMicroelectronics</td>
 <td style="text-align: left;">L7805CV</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/stmicroelectronics/L7805CV/585964?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB)</td>
-<td style="text-align: left;">[datasheet] (https://www.st.com/content/ccc/resource/technical/document/datasheet/41/4f/b3/b0/12/d4/47/88/CD00000444.pdf/files/CD00000444.pdf/jcr:content/translations/en.CD00000444.pdf)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/stmicroelectronics/L7805CV/585964?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.st.com/content/ccc/resource/technical/document/datasheet/41/4f/b3/b0/12/d4/47/88/CD00000444.pdf/files/CD00000444.pdf/jcr:content/translations/en.CD00000444.pdf">datasheet</a></td>
 <td style="text-align: left;">L7805AL1</td>
 </tr>
 <tr>
@@ -1007,8 +1007,8 @@
 <td style="text-align: left;">$0.76</td>
 <td style="text-align: left;">Same Sky</td>
 <td style="text-align: left;">CMA-4544PF-W</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices/CMA-4544PF-W/1869981)</td>
-<td style="text-align: left;">[datasheet] (https://www.sameskydevices.com/product/resource/cma-4544pf-w.pdf)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices/CMA-4544PF-W/1869981">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.sameskydevices.com/product/resource/cma-4544pf-w.pdf">datasheet</a></td>
 <td style="text-align: left;">MK1</td>
 </tr>
 <tr>
@@ -1117,8 +1117,8 @@
 <td style="text-align: left;">$0.33</td>
 <td style="text-align: left;">Keystone Electronics</td>
 <td style="text-align: left;">5001</td>
-<td style="text-align: left;">[Digikey] (https://www.digikey.com/en/products/detail/keystone-electronics/5001/255327?_gl=1<em>19b3dyz</em>_up<em>MQ..</em>_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC)</td>
-<td style="text-align: left;">[datasheet] (https://www.keyelco.com/userAssets/file/M65p56.pdf)</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/keystone-electronics/5001/255327?_gl=1*19b3dyz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.keyelco.com/userAssets/file/M65p56.pdf">datasheet</a></td>
 <td style="text-align: left;">TP1, TP2, TP3, TP4, TP5</td>
 </tr>
 <tr>
