deploy: 12403f8300f1b3b361249f1bf395a663270eb4f9

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1008,7 +1008,7 @@
 <td style="text-align: left;">Microchip</td>
 <td style="text-align: left;">DM164150</td>
 <td style="text-align: left;">PRLTA 109</td>
-<td style="text-align: left;">datasheet[https://ww1.microchip.com/downloads/aemDocuments/documents/MCU08/ProductDocuments/UserGuides/PIC18F57Q43-Curiosity-Nano-HW-UserGuide-DS40002186B.pdf]</td>
+<td style="text-align: left;"><a href="https://ww1.microchip.com/downloads/aemDocuments/documents/MCU08/ProductDocuments/UserGuides/PIC18F57Q43-Curiosity-Nano-HW-UserGuide-DS40002186B.pdf">datasheet</a></td>
 <td style="text-align: left;">CuriosityNanoAL1</td>
 </tr>
 <tr>
