deploy: 6cf80aaec18e376520e93cf392662f73e93a1cee

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -893,21 +893,21 @@
 <tr>
 <td style="text-align: left;">Green LED</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.24</td>
+<td style="text-align: left;">$0.24</td>
+<td style="text-align: left;">Würth Elektronik</td>
+<td style="text-align: left;">151051VS04000</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">D1</td>
 </tr>
 <tr>
-<td style="text-align: left;">Diode 1N4001</td>
+<td style="text-align: left;">Diode 50V 1A</td>
 <td style="text-align: left;">2</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">Diotec Semiconductor</td>
+<td style="text-align: left;">1N4001</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">D2, D3</td>
