deploy: 506ce88cb244278489b2aa4f6c49483e51abdf3b

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -917,7 +917,7 @@
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">1.54</td>
 <td style="text-align: left;">$1.54</td>
-<td style="text-align: left;">Littelfuse Inc.</td>
+<td style="text-align: left;">Littlefuse Inc.</td>
 <td style="text-align: left;">0251.200MXL</td>
 <td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/0251-200MXL/700695?_gl=1*wdb7kz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
 <td style="text-align: left;"><a href="https://www.littelfuse.com/assetdocs/fuse-251-datasheet?assetguid=f47a0bb7-8ede-4679-9646-7114c3787688">datasheet</a></td>
@@ -926,10 +926,10 @@
 <tr>
 <td style="text-align: left;">Barrel jack switch</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.76</td>
+<td style="text-align: left;">$0.76</td>
+<td style="text-align: left;">Same Sky</td>
+<td style="text-align: left;">PJ-102AH</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">J1</td>
@@ -937,12 +937,12 @@
 <tr>
 <td style="text-align: left;">Ribbon connector</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
-<td style="text-align: left;">PRLTA 109</td>
-<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">1.19</td>
+<td style="text-align: left;">$1.19</td>
+<td style="text-align: left;">molex</td>
+<td style="text-align: left;">0702460801</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/molex/0702460801/760165">Digikey</a></td>
+<td style="text-align: left;"><a href="https://www.molex.com/en-us/products/part-detail/702460801?display=pdf">datasheet</a></td>
 <td style="text-align: left;">J2</td>
 </tr>
 <tr>
@@ -1080,12 +1080,12 @@
 <tr>
 <td style="text-align: left;">10k potentiometer</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">1.66</td>
+<td style="text-align: left;">$1.66</td>
+<td style="text-align: left;">TT Electronics/BI</td>
+<td style="text-align: left;">P160KN2-0QA25B10K</td>
 <td style="text-align: left;">PRLTA 109</td>
-<td style="text-align: left;">n/a</td>
+<td style="text-align: left;"><a href="https://www.ttelectronics.com/TTElectronics/media/ProductFiles/Datasheet/P160.pdf">datasheet</a></td>
 <td style="text-align: left;">RV1</td>
 </tr>
 <tr>
@@ -1118,7 +1118,7 @@
 <td style="text-align: left;">Microchip Technology</td>
 <td style="text-align: left;">MCP6004-I/P</td>
 <td style="text-align: left;">PRLTA 109</td>
-<td style="text-align: left;">n/a</td>
+<td style="text-align: left;"><a href="https://ww1.microchip.com/downloads/aemDocuments/documents/MSLD/ProductDocuments/DataSheets/MCP6001-1R-1U-2-4-1-MHz-Low-Power-Op-Amp-DS20001733L.pdf">datasheet</a></td>
 <td style="text-align: left;">U1</td>
 </tr>
 </tbody>
