--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1014,10 +1014,10 @@
 <tr>
 <td style="text-align: left;">10k ohm resistor</td>
 <td style="text-align: left;">3</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR25SFTF52-10K</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R1, R3, R9</td>
@@ -1025,10 +1025,10 @@
 <tr>
 <td style="text-align: left;">100k ohm resistor</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR25SFBE52-100K</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R2</td>
@@ -1036,10 +1036,10 @@
 <tr>
 <td style="text-align: left;">1k ohm resistor</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR-25FTF52-1K</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R4</td>
@@ -1047,10 +1047,10 @@
 <tr>
 <td style="text-align: left;">2.2k ohm resistor</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR-25FTF52-2K2</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R5</td>
@@ -1058,10 +1058,10 @@
 <tr>
 <td style="text-align: left;">100 ohm resistor</td>
 <td style="text-align: left;">2</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR-25FTF52-100R</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R6, R7</td>
@@ -1069,10 +1069,10 @@
 <tr>
 <td style="text-align: left;">220 ohm resistor</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$2.75</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR-25FTF52-220R</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">R8</td>
