deploy: bdf46458199b8ec3ae16b280b5e9358041fa5440

--- a/index.html
+++ b/index.html
@@ -858,11 +858,11 @@ for<br>
 <li>This needs to be updated to reflect a team introduction</li>
 <li>Content should also help an unfamiliar reader navigate to areas of interest. Information like:</li>
 </ul>
-<p>To see how each major component within the subsytem communicates and interacts, see the <a href="section of the datasheet.
-For additional reasoning of why individual components were selected, please see the [Component selection] section of the datasheet.
-To review the details listed of the material used to construct the subsection, you can review it in the [&quot;BOM&quot;](https://embedded-systems-design.github.io/EGR304DataSheetTemplate/03-BOM/BOM/) section of the datasheet.
-For a more in depth overview of the subsystem and to access associated files with it, review the [Schematic] section of thie datasheet.
-To see how power was taken into consideration and a calulated current draw of all components within the system, see the [Power Budget] section of the datashee">Block Diagram</a>.</p>
+<p>To see how each major component within the subsytem communicates and interacts, see the <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/01-Block-Diagram/Block-Diagram.md">Block Diagram</a> section of the datasheet.</p>
+<p>For additional reasoning of why individual components were selected, please see the <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/02-Component-Selection/Component-Selection.md">Component selection</a> section of the datasheet.</p>
+<p>To review the details listed of the material used to construct the subsection, you can review it in the <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/03-BOM/BOM.md">"BOM"</a> section of the datasheet.</p>
+<p>For a more in depth overview of the subsystem and to access associated files with it, review the <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/schematic.md">Schematic</a> section of thie datasheet.</p>
+<p>To see how power was taken into consideration and a calulated current draw of all components within the system, see the <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Power-Budget.md">Power Budget</a> section of the datasheet.</p>
 
 
 
