--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -867,7 +867,7 @@
 <h2 id="conclusions">Conclusions</h2>
 <p>From the prepared Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
 <h2 id="resouces">Resouces</h2>
-<p>The power budget as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf"><em>here</em></a>.</p>
+<p>The power budget as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf"><em>here</em></a> and as an excel file <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.xlsx"><em>here</em></a>.</p>
 
 
 
