deploy: fb9f8f384a3c850d70ab60b764ce6d11be720565

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ as part of<br>
 <font size="8"> Sound and Motion Activated Light</font><br>
 for<br>
 <font size="5"> Team 205 </font><br><p></p>
-<p><strong>Submission: 10, 27, 2025</strong>
+<p><strong>Submission: 10/30/2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
 <p>This datasheet provides an overview of the sound detection board, a key component within my team's hands-free lighting system, explaining its design, functionality, and integration within the overall project. It includes a block diagram illustrating how the microphone, operational amplifier, and microcontroller interact to detect and process sound, explanations of component selection, the circuit schematic, and the board’s power budget. This document should serve as a technical reference and provide a clear understanding of the board’s operation and its contribution to the system’s automatic lighting function. </p>
