--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -851,7 +851,7 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true" data-desc-position="bottom"><img alt="schematic" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true"></a>
 <strong>Figure 1:</strong> Sound board schematic</p>
 <h2 id="resouces">Resouces</h2>
-<p>The schematic as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20subsystem.pdf"><em>here</em></a>, and the Zip folder of the project <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20subsystem.zip"><em>here</em></a>.</p>
+<p>The schematic as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/releases/download/schematicpdf/individual.subsystem.pdf"><em>here</em></a>, and the Zip folder of the project <a href="https://github.com/alazaritt/alazaritt.github.io/releases/download/individualschematiczip/individual.subsystem.zip"><em>here</em></a></p>
 
 
 
