deploy: 4e6293dfcaaa20ce06da0ad9f3bcb4e8a0673829

--- a/06-PCB-Design/PCB-Design/index.html
+++ b/06-PCB-Design/PCB-Design/index.html
@@ -909,13 +909,16 @@
   <h1>PCB Design</h1>
 
 <h2 id="overview">Overview</h2>
-<p>My PCB is responsible for detecting environmental sounds through a microphone, amplifying the signal with an op-amp, and sending a processed digital signal to the system’s control board via a microcontroller. The PCB layout ensures that the microphone and op-amp are properly placed for minimal noise, and that the microcontroller’s power and ground connections are strong enough for reliable signal transmission. </p>
+<p>My PCB is responsible for detecting environmental sounds through a microphone, amplifying the signal with an op-amp, and sending a processed digital signal to a seperate board via a microcontroller. The PCB layout ensures that the microphone and op-amp are properly placed for minimal noise, and that the microcontroller’s power and ground connections are strong enough for reliable signal transmission. </p>
 <p>In order to safely carry current, all power and ground traces are 40 mils, which also reduces voltage drops. All other signal traces, like those connecting the microphone, op-amp, and microcontroller I/O pins, are 20 mils, which is sufficient for lower current signals. Bypass and decoupling capacitors have been placed as close as possible to the microcontroller power pins, with shorter traces to reduce noise. This design ensures reliable detection of sound events while maintaining manufacturability and signal strength.</p>
 <h2 id="pcb-design-layout">PCB Design Layout</h2>
-<p>top layer</p>
-<p>bottom layer</p>
-<p>both</p>
-<p>The zip folder of the project is available [here]</p>
+<p>Both Layers
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20png.png?raw=true" data-desc-position="bottom"><img alt="figure1" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20png.png?raw=true"></a></p>
+<p>Top Layer
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20top%20png.png?raw=true" data-desc-position="bottom"><img alt="figure2" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20top%20png.png?raw=true"></a></p>
+<p>Bottom Layer
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20bottom%20png.png?raw=true" data-desc-position="bottom"><img alt="figure3" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/06-PCB-Design/PCB%20bottom%20png.png?raw=true"></a></p>
+<p>The zip folder of the project is available <a href="https://github.com/alazaritt/alazaritt.github.io/releases/download/schematiczip/individual.subsystem.zip">here</a> and the zip folder of the gerber files are available <a href="https://github.com/alazaritt/alazaritt.github.io/releases/download/gerberfiles/AriannaLazaritt205.zip">here</a>.</p>
 
 
 
