--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1115,15 +1115,15 @@
 <td style="text-align: left;">R8</td>
 </tr>
 <tr>
-<td style="text-align: left;">10k potentiometer</td>
+<td style="text-align: left;">5k ohm resistor</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">1.66</td>
-<td style="text-align: left;">$1.66</td>
-<td style="text-align: left;">TT Electronics/BI</td>
-<td style="text-align: left;">P160KN2-0QA25B10K</td>
+<td style="text-align: left;">0.10</td>
+<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">YAGEO</td>
+<td style="text-align: left;">MFR-25FTF52-5k</td>
 <td style="text-align: left;">PRLTA 109</td>
-<td style="text-align: left;"><a href="https://www.ttelectronics.com/TTElectronics/media/ProductFiles/Datasheet/P160.pdf">datasheet</a></td>
-<td style="text-align: left;">RV1</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">R10</td>
 </tr>
 <tr>
 <td style="text-align: left;">Push button switch</td>
