--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1010,19 +1010,19 @@
 <td style="text-align: left;">0.24</td>
 <td style="text-align: left;">$0.24</td>
 <td style="text-align: left;">Würth Elektronik</td>
-<td style="text-align: left;">151051VS04000</td>
+<td style="text-align: left;">151051BS04000</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
 <td style="text-align: left;">D1</td>
 </tr>
 <tr>
-<td style="text-align: left;">200mA fuse</td>
+<td style="text-align: left;">750mA fuse</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">1.54</td>
-<td style="text-align: left;">$1.54</td>
+<td style="text-align: left;">1.17</td>
+<td style="text-align: left;">$1.17</td>
 <td style="text-align: left;">Littlefuse Inc.</td>
-<td style="text-align: left;">0251.200MXL</td>
-<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/0251-200MXL/700695?_gl=1*wdb7kz*_up*MQ..*_gs*MQ..&amp;gclid=Cj0KCQjw9obIBhCAARIsAGHm1mTLDRXDakWGRrs9ohV3KXy1B5y6atAdIdp1YkcTolW-Qg_2YCQlunkaAgrtEALw_wcB&amp;gclsrc=aw.ds&amp;gbraid=0AAAAADrbLljH419YQeFrbB_kmy0pBIrpC">Digikey</a></td>
+<td style="text-align: left;">0251.750MXL</td>
+<td style="text-align: left;"><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/0251.750MXL/776753?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=17336967819&amp;gbraid=0AAAAADrbLljVP_hvsoPNmoiyOzvli6A1H&amp;gclid=CjwKCAiA3L_JBhAlEiwAlcWO551v7cZI3CLy-OUJ_Ty_XauunP9iPlErnZ1FgIZcRNVv_qA8IOw4fhoC1PEQAvD_BwE">Digikey</a></td>
 <td style="text-align: left;"><a href="https://www.littelfuse.com/assetdocs/fuse-251-datasheet?assetguid=f47a0bb7-8ede-4679-9646-7114c3787688">datasheet</a></td>
 <td style="text-align: left;">F1</td>
 </tr>
