deploy: 07289cae405bb413d9bb1fae95e5c93a6d6590e5

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@ as part of<br>
 <font size="8"> Sound and Motion Activated Light</font><br>
 for<br>
 <font size="5"> Team 205 </font><br><p></p>
-<p><strong>Submission: 10/30/2025</strong>
+<p><strong>Submission: 12/8/2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
 <p>This datasheet provides an overview of the sound detection board, a key component within my team's hands-free lighting system, explaining its design, functionality, and integration within the overall project. It includes a block diagram illustrating how the microphone, operational amplifier, and microcontroller interact to detect and process sound, explanations of component selection, the circuit schematic, and the board’s power budget. This document should serve as a technical reference and provide a clear understanding of the board’s operation and its contribution to the system’s automatic lighting function. </p>
@@ -989,9 +989,10 @@ for<br>
 <p>To see how each major component within the subsytem communicates and interacts, see the <a href="https://alazaritt.github.io/01-Block-Diagram/Block-Diagram/">Block Diagram</a> section of the datasheet.</p>
 <p>For additional reasoning of why individual components were selected, please see the <a href="https://alazaritt.github.io/02-Component-Selection/Component-Selection/">Component selection</a> section of the datasheet.</p>
 <p>To review the details listed of the material used to construct the subsection, you can review it in the <a href="https://alazaritt.github.io/03-BOM/BOM/">BOM</a> section of the datasheet.</p>
-<p>For a more in depth overview of the subsystem and to access associated files with it, review the <a href="https://alazaritt.github.io/04-Schematic/schematic/">Schematic</a> section of thie datasheet.</p>
+<p>For a more in depth overview of the subsystem and to access associated files with it, review the <a href="https://alazaritt.github.io/04-Schematic/schematic/">Schematic</a> section of the datasheet.</p>
 <p>To see how power was taken into consideration and a calulated current draw of all components within the system, see the <a href="https://alazaritt.github.io/05-Power-Budget/Power-Budget/">Power Budget</a> section of the datasheet.</p>
 <p>The fully developed PCB of this subsystem can be found in the <a href="https://alazaritt.github.io/06-PCB-Design/PCB-Design/">PCB Design</a> section of the datasheet.</p>
+<p>The code that wwas used to run the subsytem can be found in the <a href="https://alazaritt.github.io/07-Microcontroller-Code/code/">Microcontroller Code</a> part of the datasheet.</p>
 
 
 
