deploy: 50a0b2f49f3067d793db7057a0c00e63daf84ce9

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1017,9 +1017,14 @@
 </table>
 <p><strong>Choice:</strong> Option 2: TS02-66-43-BK-260-LCR-D button</p>
 <p><strong>Rationale:</strong> The button was chosen for its compactness and user friendliness. With a 50 mA current rating and 12 VDC voltage rating, it is appropriate for low-power control circuits. The switch's 60,000-cycle mechanical life ensures durability for typical user interactions. </p>
-<p><strong>Overall Rationale</strong>
-Each component was chosen through an evaluation of performance, cost, and compatibility with the system’s low-power and compact design requirements. The MCP6004-I/P op-amp was chosen for its low power consumption, high signal range, and stable signal amplification. This makes it ideal for accurate signal processing while keeping cost and complexity low. The CMA-4544PF-W microphone provides a wide frequency range and high signal-to-noise ratio, ensuring clear and reliable sound detection while remaining compact enough to fulfill project requirements.</p>
+<p><strong>Overall Rationale:</strong> Each component was chosen through an evaluation of performance, cost, and compatibility with the system’s low-power and compact design requirements. The MCP6004-I/P op-amp was chosen for its low power consumption, high signal range, and stable signal amplification. This makes it ideal for accurate signal processing while keeping cost and complexity low. The CMA-4544PF-W microphone provides a wide frequency range and high signal-to-noise ratio, ensuring clear and reliable sound detection while remaining compact enough to fulfill project requirements.</p>
 <p>To maintain stable operation, the L7805CV voltage regulator was selected for its reliable 5 V output, built-in protection features, and simplicity, making it optimal for low-power circuitry. Finally, the TS02-66-43-BK-260-LCR-D button offers durability, small size, and suitable electrical ratings for low-voltage control inputs. Together, these components meet the product’s requirements for efficiency, reliability, and cost-effectiveness, ensuring consistent performance within the intended conditions.</p>
+<p><em>Table 4: Final Components Selected (summary)</em></p>
+<p>| <strong>Part Name/Description</strong> | <strong>Qty</strong> | <strong>Manufacturer</strong> | <strong>Manufacturer #</strong> | <strong>Vendor Link</strong> |<strong>Datasheet Link</strong> | <strong>Reason for Selection</strong> |
+|:--------------------|:----|:---------------|:-----|:--------|:-----|:-----|:----|:-----|
+microphone |5 | 0.2750 | $1.38 | KEMET | C0805F104K5RACTU | PRLTA 109 |
+voltage regulator |1 | 0.24 | $0.24 | Würth Elektronik | 151051BS04000 | PRLTA 109 |
+op amp |1 | 1.17 | $1.17 | Littlefuse Inc. | 0251.750MXL | <a href="https://www.digikey.com/en/products/detail/littelfuse-inc/0251.750MXL/776753?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=17336967819&amp;gbraid=0AAAAADrbLljVP_hvsoPNmoiyOzvli6A1H&amp;gclid=CjwKCAiA3L_JBhAlEiwAlcWO551v7cZI3CLy-OUJ_Ty_XauunP9iPlErnZ1FgIZcRNVv_qA8IOw4fhoC1PEQAvD_BwE">Digikey</a> |</p>
 
 
 
