deploy: 8dde0ae76838d893642774a8ece76484e57d47a8

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1024,41 +1024,60 @@
 <thead>
 <tr>
 <th style="text-align: left;"><strong>Part Name/Description</strong></th>
-<th style="text-align: left;"><strong>Qty</strong></th>
-<th style="text-align: left;"><strong>Unit Cost</strong></th>
-<th style="text-align: left;"><strong>Total Cost</strong></th>
-<th style="text-align: left;"><strong>Manufacture</strong></th>
-<th style="text-align: left;"><strong>Manufacturer #</strong></th>
-<th style="text-align: left;"><strong>Vendor Link</strong></th>
+<th style="text-align: left;"><strong>Manufacturer/Part Number</strong></th>
+<th style="text-align: left;"><strong>Function</strong></th>
+<th style="text-align: left;"><strong>Rationale</strong></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align: left;">0.1 µF Ceramic Capacitor, +/-10%, X7R, 50V, 0805 package</td>
-<td style="text-align: left;">5</td>
-<td style="text-align: left;">0.2750</td>
-<td style="text-align: left;">$1.38</td>
-<td style="text-align: left;">KEMET</td>
-<td style="text-align: left;">C0805F104K5RACTU</td>
-<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">Op-amp</td>
+<td style="text-align: left;">Microchip/MCP6004-I/P-ND</td>
+<td style="text-align: left;">Amplifies and conditions analog signal from the microphone</td>
+<td style="text-align: left;">This op-amp balances low power and high signal range regardless of signal speed</td>
 </tr>
 <tr>
-<td style="text-align: left;">Green LED</td>
-<td style="text-align: left;">1</td>
-<td style="text-align: left;">0.24</td>
-<td style="text-align: left;">$0.24</td>
-<td style="text-align: left;">Würth Elektronik</td>
-<td style="text-align: left;">151051BS04000</td>
-<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">Microphone</td>
+<td style="text-align: left;">Same Sky/CMA-4544PF-W</td>
+<td style="text-align: left;">converts sound to an electrical signal</td>
+<td style="text-align: left;">It provides a wide range frequency response and stable sensitivity. Its small size, low power requirement, and standard interface also simplify integration within the subsytem</td>
 </tr>
 <tr>
-<td style="text-align: left;">Barrel jack switch</td>
-<td style="text-align: left;">1</td>
-<td style="text-align: left;">0.76</td>
-<td style="text-align: left;">$0.76</td>
-<td style="text-align: left;">Same Sky</td>
-<td style="text-align: left;">PJ-102AH</td>
-<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">Voltage regulator</td>
+<td style="text-align: left;">STMicroelectronics/L7805CV</td>
+<td style="text-align: left;">To ensure that only 5V of power runs through the circuit</td>
+<td style="text-align: left;">It allows for a fixed 5 V output with up to ~1.5 A of current. Its reliability and tolerance to voltage variations ensure safety, as there’s enough headroom voltage to dissipate heat.</td>
+</tr>
+</tbody>
+</table>
+<p><em>Table 5: MCC Pinout</em></p>
+<table>
+<thead>
+<tr>
+<th style="text-align: left;"><strong>Part Name/Description</strong></th>
+<th style="text-align: left;"><strong>Manufacturer/Part Number</strong></th>
+<th style="text-align: left;"><strong>Function</strong></th>
+<th style="text-align: left;"><strong>Rationale</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: left;">Op-amp</td>
+<td style="text-align: left;">Microchip/MCP6004-I/P-ND</td>
+<td style="text-align: left;">Amplifies and conditions analog signal from the microphone</td>
+<td style="text-align: left;">This op-amp balances low power and high signal range regardless of signal speed</td>
+</tr>
+<tr>
+<td style="text-align: left;">Microphone</td>
+<td style="text-align: left;">Same Sky/CMA-4544PF-W</td>
+<td style="text-align: left;">converts sound to an electrical signal</td>
+<td style="text-align: left;">It provides a wide range frequency response and stable sensitivity. Its small size, low power requirement, and standard interface also simplify integration within the subsytem</td>
+</tr>
+<tr>
+<td style="text-align: left;">Voltage regulator</td>
+<td style="text-align: left;">STMicroelectronics/L7805CV</td>
+<td style="text-align: left;">To ensure that only 5V of power runs through the circuit</td>
+<td style="text-align: left;">It allows for a fixed 5 V output with up to ~1.5 A of current. Its reliability and tolerance to voltage variations ensure safety, as there’s enough headroom voltage to dissipate heat.</td>
 </tr>
 </tbody>
 </table>
